--- a/README
+++ b/README
@@ -7,3 +7,6 @@ in order to make various Bitcoin related tasks very easy to accomplish.
 Donations welcome at 12kDUgVkLtaWJwbJY5YmUP1nkqVp3166Ts
 
 Licensed under MIT License.
+
+For description of classes and utilities look into the comments present
+in their source code.
